test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_loop_decl_no_init_none_pointer.plx
pub fn main(none) i32 {
    loop i: *none; while 1 .. i = nil {
        return 1
    }
    return 0
}
